Additional code smell cleanup