@@ -7,7 +7,6 @@ import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
 import java.util.function.Function;
-import java.util.stream.Collectors;
 
 import javax.persistence.EntityManager;
 import javax.persistence.PersistenceContext;
@@ -67,8 +66,10 @@ import lombok.RequiredArgsConstructor;
 @Service
 @RequiredArgsConstructor
 public class PatientService {
+    private static final String ACTIVE = "ACTIVE";
+
     @Value("${nbs.max-page-size: 50}")
-    private Integer MAX_PAGE_SIZE;
+    private Integer maxPageSize;
 
     @PersistenceContext
     private final EntityManager entityManager;
@@ -101,7 +102,7 @@ public class PatientService {
                 default:
                     throw new QueryException("Invalid sort value: " + s.getProperty());
             }
-        }).collect(Collectors.toList());
+        }).toList();
         for (var s : sorts) {
             query = query.orderBy(s);
         }
@@ -115,7 +116,7 @@ public class PatientService {
 
     public Page<Person> findAllPatients(GraphQLPage page) {
         var person = QPerson.person;
-        var pageable = GraphQLPage.toPageable(page, MAX_PAGE_SIZE);
+        var pageable = GraphQLPage.toPageable(page, maxPageSize);
         var query = new BlazeJPAQuery<Person>(entityManager, criteriaBuilderFactory)
                 .select(person)
                 .from(person);
@@ -123,16 +124,15 @@ public class PatientService {
 
         var results = query.fetchPage((int) pageable.getOffset(),
                 pageable.getPageSize());
-        return new PageImpl<Person>(results, pageable, results.getMaxResults());
+        return new PageImpl<>(results, pageable, results.getMaxResults());
     }
 
     public Page<Person> findPatientsByFilter(PatientFilter filter, GraphQLPage page) {
-        var pageable = GraphQLPage.toPageable(page, MAX_PAGE_SIZE);
+        var pageable = GraphQLPage.toPageable(page, maxPageSize);
         List<Long> ids;
-        long totalCount = 0L;
         BoolQueryBuilder builder = QueryBuilders.boolQuery();
 
-        builder.must(QueryBuilders.matchQuery("cd", "PAT"));
+        builder.must(QueryBuilders.matchQuery(ElasticsearchPerson.CD, "PAT"));
 
         if (filter.getId() != null) {
             var idQuery = QueryBuilders.boolQuery();
@@ -142,67 +142,69 @@ public class PatientService {
         }
 
         if (filter.getFirstName() != null && !filter.getFirstName().isEmpty()) {
-            builder.must(QueryBuilders.nestedQuery("name",
+            builder.must(QueryBuilders.nestedQuery(ElasticsearchPerson.NAME,
                     QueryBuilders.queryStringQuery(addWildcards(filter.getFirstName())).defaultField("name.firstNm"),
                     ScoreMode.Avg));
         }
 
         if (filter.getLastName() != null && !filter.getLastName().isEmpty()) {
-            builder.must(QueryBuilders.nestedQuery("name",
+            builder.must(QueryBuilders.nestedQuery(ElasticsearchPerson.NAME,
                     QueryBuilders.queryStringQuery(addWildcards(filter.getLastName())).defaultField("name.lastNm"),
                     ScoreMode.Avg));
         }
 
         if (filter.getSsn() != null && !filter.getSsn().isEmpty()) {
-            builder.must(QueryBuilders.matchQuery("SSN", filter.getSsn()));
+            builder.must(QueryBuilders.matchQuery(ElasticsearchPerson.SSN, filter.getSsn()));
         }
 
         if (filter.getPhoneNumber() != null && !filter.getPhoneNumber().isEmpty()) {
-            builder.must(QueryBuilders.nestedQuery("phone",
+            builder.must(QueryBuilders.nestedQuery(ElasticsearchPerson.PHONE,
                     QueryBuilders.matchQuery("phone.telephoneNbr", filter.getPhoneNumber()), ScoreMode.Avg));
         }
 
         if (filter.getAddress() != null && !filter.getAddress().isEmpty()) {
-            builder.must(QueryBuilders.nestedQuery("address", QueryBuilders
+            builder.must(QueryBuilders.nestedQuery(ElasticsearchPerson.ADDRESS, QueryBuilders
                     .queryStringQuery(addWildcards(filter.getAddress())).defaultField("address.streetAddr1"),
                     ScoreMode.Avg));
         }
 
         if (filter.getGender() != null) {
-            builder.must(QueryBuilders.matchQuery("birth_gender_cd", filter.getGender()));
+            builder.must(QueryBuilders.matchQuery(ElasticsearchPerson.BIRTH_GENDER_CD, filter.getGender()));
         }
 
         if (filter.getDeceased() != null) {
-            builder.must(QueryBuilders.matchQuery("deceased_ind_cd", filter.getDeceased()));
+            builder.must(QueryBuilders.matchQuery(ElasticsearchPerson.DECEASED_IND_CD, filter.getDeceased()));
         }
 
         if (filter.getCity() != null && !filter.getCity().isEmpty()) {
-            builder.must(QueryBuilders.nestedQuery("address",
+            builder.must(QueryBuilders.nestedQuery(ElasticsearchPerson.ADDRESS,
                     QueryBuilders.queryStringQuery(addWildcards(filter.getCity())).defaultField("address.city"),
                     ScoreMode.Avg));
         }
 
         if (filter.getZip() != null && !filter.getZip().isEmpty()) {
-            builder.must(QueryBuilders.nestedQuery("address", QueryBuilders.matchQuery("address.zip", filter.getZip()),
+            builder.must(QueryBuilders.nestedQuery(ElasticsearchPerson.ADDRESS,
+                    QueryBuilders.matchQuery("address.zip", filter.getZip()),
                     ScoreMode.Avg));
         }
 
         if (filter.getState() != null && !filter.getState().isEmpty()) {
-            builder.must(QueryBuilders.nestedQuery("address",
+            builder.must(QueryBuilders.nestedQuery(ElasticsearchPerson.ADDRESS,
                     QueryBuilders.matchQuery("address.state", filter.getState()), ScoreMode.Avg));
         }
 
         if (filter.getCountry() != null && !filter.getCountry().isEmpty()) {
-            builder.must(QueryBuilders.nestedQuery("address",
+            builder.must(QueryBuilders.nestedQuery(ElasticsearchPerson.ADDRESS,
                     QueryBuilders.matchQuery("address.cntryCd", filter.getCountry()), ScoreMode.Avg));
         }
 
         if (filter.getEthnicity() != null) {
-            builder.must(QueryBuilders.matchQuery("ethnic_group_ind", ethnicityConverter.write(filter.getEthnicity())));
+            builder.must(QueryBuilders.matchQuery(ElasticsearchPerson.ETHNIC_GROUP_IND,
+                    ethnicityConverter.write(filter.getEthnicity())));
         }
 
         if (filter.getRace() != null) {
-            builder.must(QueryBuilders.nestedQuery("race",
+            builder.must(QueryBuilders.nestedQuery(ElasticsearchPerson.RACE,
                     QueryBuilders.matchQuery("race.raceDescTxt", filter.getRace()), ScoreMode.Avg));
         }
 
@@ -214,18 +216,18 @@ public class PatientService {
         // TODO check permission for allowing deleted / superceeded - await
         // clarification from Henry Tavarez on if it will be included in UI
         if (filter.getRecordStatus() != null) {
-            builder.must(QueryBuilders.matchQuery("record_status_cd", filter.getRecordStatus()));
+            builder.must(QueryBuilders.matchQuery(ElasticsearchPerson.RECORD_STATUS_CD, filter.getRecordStatus()));
         }
 
         if (filter.getDateOfBirth() != null) {
             String dobOperator = filter.getDateOfBirthOperator();
             String dobString = (String) instantConverter.write(filter.getDateOfBirth());
             if (dobOperator == null || dobOperator.equalsIgnoreCase("equal")) {
-                builder.must(QueryBuilders.matchQuery("birth_time", dobString));
+                builder.must(QueryBuilders.matchQuery(ElasticsearchPerson.BIRTH_TIME, dobString));
             } else if (dobOperator.equalsIgnoreCase("before")) {
-                builder.must(QueryBuilders.rangeQuery("birth_time").lt(dobString));
+                builder.must(QueryBuilders.rangeQuery(ElasticsearchPerson.BIRTH_TIME).lt(dobString));
             } else if (dobOperator.equalsIgnoreCase("after")) {
-                builder.must(QueryBuilders.rangeQuery("birth_time").gt(dobString));
+                builder.must(QueryBuilders.rangeQuery(ElasticsearchPerson.BIRTH_TIME).gt(dobString));
             }
         }
 
@@ -238,16 +240,15 @@ public class PatientService {
                 .map(h -> h.getContent())
                 .filter(Objects::nonNull)
                 .map(ElasticsearchPerson::getPersonUid)
-                .collect(Collectors.toList());
-        totalCount = elasticsearchPersonSearchHits.getTotalHits();
+                .toList();
         var persons = personRepository.findAllById(ids);
-        return new PageImpl<Person>(persons, pageable, totalCount);
+        return new PageImpl<>(persons, pageable, elasticsearchPersonSearchHits.getTotalHits());
 
     }
 
     public Page<Person> findPatientsByOrganizationFilter(OrganizationFilter filter, GraphQLPage page) {
         // limit page size
-        var pageable = GraphQLPage.toPageable(page, MAX_PAGE_SIZE);
+        var pageable = GraphQLPage.toPageable(page, maxPageSize);
 
         var organization = QOrganization.organization;
         var person = QPerson.person;
@@ -268,7 +269,7 @@ public class PatientService {
         query = addParameter(query, organization.zipCd::eq, filter.getZipCd());
         applySort(query, pageable.getSort());
         var results = query.fetchPage((int) pageable.getOffset(), pageable.getPageSize());
-        return new PageImpl<Person>(results, pageable, results.getMaxResults());
+        return new PageImpl<>(results, pageable, results.getMaxResults());
     }
 
     // checks to see if the filter provided is null, if not add the filter to the
@@ -276,10 +277,8 @@ public class PatientService {
     private <T, I> BlazeJPAQuery<T> addParameter(BlazeJPAQuery<T> query,
             Function<I, BooleanExpression> expression, I filter) {
         if (filter != null) {
-            if (filter instanceof String s) {
-                if (s.trim().length() == 0) {
-                    return query;
-                }
+            if (filter instanceof String s && s.trim().length() == 0) {
+                return query;
             }
             return query.where(expression.apply(filter));
         } else {
@@ -357,7 +356,7 @@ public class PatientService {
         personRace.setPersonUid(person);
         personRace.setAddTime(now);
         personRace.setRaceCategoryCd(race);
-        personRace.setRecordStatusCd("ACTIVE");
+        personRace.setRecordStatusCd(ACTIVE);
 
         if (person.getRaces() == null) {
             person.setRaces(Arrays.asList(personRace));
@@ -379,11 +378,11 @@ public class PatientService {
         personName.setFirstNm(name.getFirstName());
         // personName.setFirstNmSndx(); TODO how to generate sndx
         personName.setLastNm(name.getLastName());
-        // personName.setLastNmSndx();
+        // personName.setLastNmSndx(); TODO
         personName.setMiddleNm(name.getMiddleName());
         personName.setNmSuffix(name.getSuffix());
         personName.setNmUseCd("L"); // L = legal, AL = alias. per NEDSSConstants
-        personName.setRecordStatusCd("ACTIVE");
+        personName.setRecordStatusCd(ACTIVE);
         personName.setRecordStatusTime(now);
         personName.setStatusCd('A');
         personName.setStatusTime(now);
@@ -402,7 +401,7 @@ public class PatientService {
      */
     private List<PostalLocator> addPostalLocatorEntries(Person person, List<PostalAddress> addresses) {
         var postalLocators = new ArrayList<PostalLocator>();
-        if (addresses.size() > 0) {
+        if (!addresses.isEmpty()) {
             var auth = SecurityContextHolder.getContext().getAuthentication();
             var user = (NbsUserDetails) auth.getPrincipal();
             // Grab highest Id from DB -- eventually fix db to auto increment
@@ -419,7 +418,7 @@ public class PatientService {
                 elp.setClassCd("PST");
                 elp.setLastChgTime(now);
                 elp.setLastChgUserId(user.getId());
-                elp.setRecordStatusCd("ACTIVE");
+                elp.setRecordStatusCd(ACTIVE);
                 elp.setRecordStatusTime(now);
                 elp.setStatusCd('A');
                 elp.setStatusTime(now);
@@ -437,7 +436,7 @@ public class PatientService {
                 locator.setStreetAddr2(address.getStreetAddress2());
                 locator.setZipCd(address.getZip());
                 locator.setCensusTract(address.getCensusTract());
-                locator.setRecordStatusCd("ACTIVE");
+                locator.setRecordStatusCd(ACTIVE);
                 locator.setRecordStatusTime(now);
 
                 elp.setLocator(locator);
@@ -462,7 +461,7 @@ public class PatientService {
     private List<TeleLocator> addTeleLocatorEntries(Person person, List<PhoneNumber> phoneNumbers,
             List<String> emailAddresses) {
         var locatorList = new ArrayList<TeleLocator>();
-        if (phoneNumbers.size() > 0 || emailAddresses.size() > 0) {
+        if (!phoneNumbers.isEmpty() || !emailAddresses.isEmpty()) {
             var auth = SecurityContextHolder.getContext().getAuthentication();
             var user = (NbsUserDetails) auth.getPrincipal();
             // Grab highest Id from DB -- eventually fix db to auto increment
@@ -479,7 +478,7 @@ public class PatientService {
                 setElpTypeFields(elp, pn.getPhoneType());
                 elp.setLastChgTime(now);
                 elp.setLastChgUserId(user.getId());
-                elp.setRecordStatusCd("ACTIVE");
+                elp.setRecordStatusCd(ACTIVE);
                 elp.setRecordStatusTime(now);
                 elp.setStatusCd('A');
                 elp.setStatusTime(now);
@@ -489,8 +488,8 @@ public class PatientService {
                 locator.setAddTime(now);
                 locator.setAddUserId(user.getId());
                 locator.setExtensionTxt(pn.getExtension());
-                locator.setPhoneNbrTxt(pn.getPhoneNumber());
-                locator.setRecordStatusCd("ACTIVE");
+                locator.setPhoneNbrTxt(pn.getNumber());
+                locator.setRecordStatusCd(ACTIVE);
 
                 elp.setLocator(locator);
                 locatorList.add(locator);
@@ -508,7 +507,7 @@ public class PatientService {
                 elp.setUseCd("H");
                 elp.setLastChgTime(now);
                 elp.setLastChgUserId(user.getId());
-                elp.setRecordStatusCd("ACTIVE");
+                elp.setRecordStatusCd(ACTIVE);
                 elp.setRecordStatusTime(now);
                 elp.setStatusCd('A');
                 elp.setVersionCtrlNbr((short) 1);
@@ -517,7 +516,7 @@ public class PatientService {
                 locator.setAddTime(now);
                 locator.setAddUserId(user.getId());
                 locator.setEmailAddress(email);
-                locator.setRecordStatusCd("ACTIVE");
+                locator.setRecordStatusCd(ACTIVE);
 
                 elp.setLocator(locator);
                 locatorList.add(locator);
